# caption-animator

./: .gitignore  MIGRATION_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  cli.py  example_usage.py  pyproject.toml  test_animations_basic.py  test_refactored_basic.py
presets/: preset.json  word_highlight.json
src/caption_animator/: __init__.py  __main__.py
src/caption_animator/animations/: __init__.py  base.py  blur.py  fade.py  registry.py  scale.py  slide.py  word_reveal.py
src/caption_animator/cli/: __init__.py  args.py  commands.py  interactive.py  main.py
src/caption_animator/core/: __init__.py  config.py  sizing.py  style.py  subtitle.py
src/caption_animator/presets/: __init__.py  defaults.py  loader.py
src/caption_animator/rendering/: __init__.py  ffmpeg.py  progress.py
src/caption_animator/text/: __init__.py  measurement.py  utils.py  wrapper.py
src/caption_animator/utils/: __init__.py  files.py
tests/: __init__.py  conftest.py
tests/test_animations/: __init__.py  test_word_reveal.py
tests/test_core/: test_sizing.py
tests/test_text/: __init__.py  test_measurement.py  test_wrapper.py
