[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "caption-animator"
version = "0.1.0"
description = "Render SRT/ASS subtitle files into tight, animated, alpha-channel video overlays for DaVinci Resolve."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Tim Eck", email = "public@verbumcaro.com" }
]

keywords = [
  "subtitles",
  "captions",
  "srt",
  "ass",
  "ffmpeg",
  "davinci-resolve",
  "video",
  "overlay"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Video Professionals",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Sound/Audio"
]


dependencies = [
  "pysubs2>=1.6.0",
  "Pillow>=10.0.0",
  "PyYAML>=6.0"
]


[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest"
]


[project.scripts]
render-overlay = "cli:main"


[tool.setuptools]
py-modules = ["cli"]


[tool.black]
line-length = 100
target-version = ["py39"]


[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
